fix: Use dark mode for dropdown (#460)
* fix : reset button, view buttons design issues solved

* fix : design issues of import export buttons solved

* fix : asset type dropdown background changed to black

--- a/exam_frontend/src/components/TableNavBar/TableNavbar.module.css
+++ b/exam_frontend/src/components/TableNavBar/TableNavbar.module.css
@@ -4,11 +4,6 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 2rem;
-  /* width: 1022px;
-    background-color: #c9cfdc;
-    padding: 0.5rem;
-    margin: 35px;
-    border-radius: 10px; */
 }
 
 .button {
